Adding output files expectations, dealing with special vm commands (function/call).